Fix dialog component padding overflow

--- a/style.css
+++ b/style.css
@@ -37,6 +37,7 @@ body {
   padding-top: 40px;
   padding-bottom: 30px;
 
+  overflow: auto;
   box-sizing: border-box;
 }
 
